--- a/src/main/resources/templates/activate_account.html
+++ b/src/main/resources/templates/activate_account.html
@@ -77,7 +77,7 @@
         <p>Hi <span th:text="${username}">my friend</span>!</p>
         <p>Thank you for registering with us! To complete your registration,
             please check the token and click the button below to activate your account:</p>
-        <h2 class="code" th:text="${token}">Something went wrong</h2>
+        <h2 class="code" th:text="${code}">Something went wrong</h2>
         <a th:href="${url}" target="_blank">Activate My Account</a>
         <p >If you didn't create an account using this email address, please ignore this email.</p>
     </div>
